--- a/src/app/views/home/home-view.component.scss
+++ b/src/app/views/home/home-view.component.scss
@@ -1,3 +1,55 @@
 .main-content {
+    .header-text {
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+
+    .generate-button {
+        margin-top: 30px;
+    }
+
+    .calendar {
+        margin-top: 50px;
+        margin-bottom: 50px;
+
+        .month {
+            text-align: center;
+            .weekdays {    
+                .weekday {
+                    position: relative;
+                    display: inline-block;
+                    width: 30px;
+                    height: 30px;
     
+                    > span {
+                        position: absolute;
+                        top: 3px;
+                        left: 10px;
+                    }
+                }
+            }
+
+            .month-year {
+                text-align: center;
+                background-color: green;
+            }
+
+            .month-days {
+                .week {
+                    .month-day {
+                        position: relative;
+                        display: inline-block;
+                        width: 30px;
+                        height: 30px;
+
+                        > span {
+                            position: absolute;
+                            top: 3px;
+                            left: 10px;
+                        }
+                    }
+                }
+            }
+        }        
+    }
 }
