Fixed logic of getWeekDay. Some styles.

--- a/src/app/views/home/home-view.component.html
+++ b/src/app/views/home/home-view.component.html
@@ -38,7 +38,7 @@
             <div class="weekday"><span>S</span></div>
           </div>
           <div class="month-year">
-            {{ monthDays.month }} {{ monthDays.year }}
+            {{ monthToStr(monthDays.month) }} {{ monthDays.year }}
           </div>
           <div class="month-days">
             <div *ngFor='let week of getWeeks(monthDays)' class="week">
