--- a/src/app/views/home/home-view.component.scss
+++ b/src/app/views/home/home-view.component.scss
@@ -14,6 +14,8 @@
 
         .month {
             text-align: center;
+            padding-bottom: 30px;
+            
             .weekdays {    
                 .weekday {
                     position: relative;
