--- a/src/app/views/home/home-view.component.html
+++ b/src/app/views/home/home-view.component.html
@@ -15,7 +15,10 @@
         </ng2-numeric-input>
       </div>
       <div class="col-sm-4">
-
+          <div class="form-group">
+              <input type="text" class="form-control" aria-describedby="emailHelp"
+                [(ngModel)]="countryCode" placeholder="Enter country code">
+            </div>
       </div>
       <div class="col-12">
           <div class="text-center generate-button">
